# LeetCode_CodeWars-Solutions

./:  Sort_Numbers   Sort_Numbers.cpp  .cache.sqlite  16+18=214  16+18=214.cpp  5_without_numbers_!!  5_without_numbers_!!.cpp  A_Rule_of_Divisibility_by_13  A_Rule_of_Divisibility_by_13.cpp  Angle_Between_Hands_of_a_Clock  Angle_Between_Hands_of_a_Clock.cpp  Backspaces_in_string  Backspaces_in_string.cpp  Basics_08_Find_next_higher_number_with_same_Bits_1_s  Basics_08_Find_next_higher_number_with_same_Bits_1_s.cpp  Beginner_Reduce_but_Grow  Beginner_Reduce_but_Grow.cpp  Binary_Number_with_Alternating_Bits  Binary_Number_with_Alternating_Bits.cpp  Binary_Watch  Binary_Watch.cpp  Bulb_Switcher  Bulb_Switcher.cpp  CMakeLists.txt  Calculate_Money_in_Leetcode_Bank  Calculate_Money_in_Leetcode_Bank.cpp  Categorize_New_Member  Categorize_New_Member.cpp  Center_of_the_Matrix  Center_of_the_Matrix.cpp  Check_If_Two_String_Arrays_are_Equivalent  Check_If_Two_String_Arrays_are_Equivalent.cpp  Check_if_Binary_String_Has_at_Most_One_Segment_of_Ones  Check_if_Binary_String_Has_at_Most_One_Segment_of_Ones.cpp  Common_array_elements  Common_array_elements.cpp  Compare_powers  Compare_powers.cpp  Complement_of_Base_10_Integer  Complement_of_Base_10_Integer.cpp  (+234 more)
 Sort_Numbers.dSYM/Contents/: Info.plist
16+18=214.dSYM/Contents/: Info.plist
5_without_numbers_!!.dSYM/Contents/: Info.plist
A_Rule_of_Divisibility_by_13.dSYM/Contents/: Info.plist
Angle_Between_Hands_of_a_Clock.dSYM/Contents/: Info.plist
Backspaces_in_string.dSYM/Contents/: Info.plist
Snail.dSYM/Contents/: Info.plist
(+393 files in other folders)
